--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src= "js/scripts.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
     <meta charset="utf-8">
     <title>Appointments</title>
   </head>
   <body>
     <h1>Appointments</h1>
     <div class="container">
-      <form id="name">
+      <form id="detailsform">
         <div class="form-group">
           <label for="addName">Name</label>
           <input id="addName" class="form-control" type="text">
@@ -31,35 +32,41 @@
         <div class="form-group" id="selectOption">
           <label for="service">Select Service</label>
           <select class="form-control" id="service">
-            <option value="1">Facial</option>
-            <option value="2">Massage</option>
-            <option value="3">Hair cut</option>
-            <option value="4">Waxing</option>
+            <option>Facial</option>
+            <option>Massage</option>
+            <option>Hair Cut</option>
+            <option>Hair Color</option>
           </select>
         </div>
-
+        <div class="form-group">
+          <label for="details">For additional requests:</label>
+          <textarea class="form-control" id="details" rows="3" placeholder="Enter details.."></textarea>
+        </div>
         <button type="submit" class="btn btn-danger">Submit</button>
       </form>
 
-      <div class="modal" id="appointment-modal" tabindex="-1" role="dialog">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Appointment Made!</h5>
-          </div>
-          <div class="modal-body">
-            <p id="name"></p>
-            <p id="DoA"></p>
-            <p id="date"></p>
-            <p id="time"></p>
+      <!-- The Modal -->
+      <div class="modal" id="myModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
 
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary">Sounds Good!</button>
+            <!-- Modal Header -->
+            <div class="modal-header">
+              <h4 class="modal-title">Verify your details below:</h4>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <!-- Modal body -->
+            <div class="modal-body">
+             <p>Hi, <span id=modalName></span>. Your <span id="modalService"></span> appointment is booked for <span id="modalDate"></span> will begin at <span id="modalStartTime"></span> and end at <span id="modalEndTime"></span> .Please make sure you arrive 15 minutes prior to your appointment time to meet with your service provider and discuss your special requests here - <span id="modalSpecial"></span>
+            </div>
+            <!-- Modal footer -->
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" id="modalClose">Close</button>
+            </div>
+
           </div>
         </div>
       </div>
     </div>
-    </div>
   </body>
-</html>
+  </html>
